build and show menu items

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-restaurants-list></app-restaurants-list>
+<app-menus-list></app-menus-list>
 <app-add-restaurant-form></app-add-restaurant-form>
+<app-add-menu-form></app-add-menu-form>
