edit menu and restaurant

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-restaurants-list></app-restaurants-list>
-<app-menus-list></app-menus-list>
+
+
+<router-outlet></router-outlet>
+
 <app-add-restaurant-form></app-add-restaurant-form>
-<app-add-menu-form></app-add-menu-form>
