--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -11,10 +11,10 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Restaurants</a>
+                <a class="nav-link" [routerLink]="['/restaurants']" routerLinkActive="router-link-active" >Restaurants</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Orders</a>
+                <a class="nav-link" [routerLink]="['/orders']" routerLinkActive="router-link-active" >Orders</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/addRest']" routerLinkActive="router-link-active" >
