--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
-<app-nav-bar></app-nav-bar>
-
+<!-- <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
+<app-add-restaurant-form></app-add-restaurant-form> -->
 
-<!-- <app-add-restaurant-form></app-add-restaurant-form> -->
+<app-admin-panel></app-admin-panel>
