--- a/src/app/add-menu-form/add-menu-form.component.html
+++ b/src/app/add-menu-form/add-menu-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <form (ngSubmit)="onSubmit()" #addForm="ngForm" class="col-6">
+    <form (ngSubmit)="onSubmit()" #addForm="ngForm">
         <h2>Add Menu Item</h2>
         <div class="form-group">
             <label for="name">Name</label>
