--- a/src/app/add-restaurant-form/add-restaurant-form.component.html
+++ b/src/app/add-restaurant-form/add-restaurant-form.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <form (ngSubmit)="onSubmit()" #addForm="ngForm" class="col-6">
+    <form (ngSubmit)="onSubmit()" #addForm="ngForm">
         <h2>Add Restaurant</h2>
         <div class="form-group">
             <label for="name">Name</label>
