--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: orangered;">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: purple;">
     <!-- <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a> -->
     <a class="navbar-brand" href="">Talabat.com</a>
     <button class="navbar-toggler" type="button" (click)="toggleNavbar = !toggleNavbar" data-toggle="collapse"
@@ -16,7 +16,7 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/orders']" routerLinkActive="router-link-active" >Orders</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/addRest']" routerLinkActive="router-link-active" >
                     Add Restaurant
                 </a>
@@ -25,14 +25,14 @@
                 <a class="nav-link" [routerLink]="['/addMenu']" routerLinkActive="router-link-active" >
                     Add Menu Item
                 </a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-dark btn-warning my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
 </nav>
