fix edit issues

--- a/src/app/menus-list/menus-list.component.html
+++ b/src/app/menus-list/menus-list.component.html
@@ -7,8 +7,10 @@
     
     </select>
     <button class="btn btn-outline-success" (click)="goBack()">Go back</button>
+
     <div class="row" *ngIf="menus.length>0">
-        <app-menu-item *ngFor="let menu of menus" [menu]="menu" [isOrdered]="false"></app-menu-item>
+        <app-menu-item *ngFor="let menu of menus" [menu]="menu" [isOrdered]="false"
+         (delete)="delete($event)" (edit)="editMenu($event)"></app-menu-item>
     </div>
 
     <div *ngIf="menus.length==0">
