--- a/src/app/restaurant-item/restaurant-item.component.html
+++ b/src/app/restaurant-item/restaurant-item.component.html
@@ -15,10 +15,10 @@
             </p>
             <a routerLink="/menus/{{restaurant.id}}" routerLinkActive="active" class="btn btn-info">show menu items</a>
             <div class="row-btns">
-                <app-edit-restaurant [restaurant]='restaurant'></app-edit-restaurant>
-                <button type="button" class="btn btn-warning" data-toggle="modal" 
+                <app-edit-restaurant *ngIf="isAdmin" [restaurant]='restaurant'></app-edit-restaurant>
+                <button *ngIf="!isAdmin" type="button" class="btn btn-warning" data-toggle="modal" 
                 data-target="#exampleModal" (click)="open(mymodal)">Rate</button>
-                <button class="btn btn-danger" (click)="deleteRest()">Delete</button>
+                <button *ngIf="isAdmin" class="btn btn-danger" (click)="deleteRest()">Delete</button>
             </div>
         </div>
 
