--- a/src/app/menu-item/menu-item.component.html
+++ b/src/app/menu-item/menu-item.component.html
@@ -1,3 +1,6 @@
+
+<!-- <p>Works</p> -->
+
 <div class="card">
     <div style="height: 450px">
         <img class="card-img-top" [src]="menu.image" alt="Card image" style="height:100%">
@@ -13,12 +16,16 @@
             <p class="card-text" style="color: white;">
                 {{menu.price}}
             </p>
+            <p *ngIf="isOrdered" class="card-text" style="color: white;">
+                {{menu.quantity}} Pieces
+            </p>
             <div class="row-btns">
-                <app-edit-menu [menu]="menu"></app-edit-menu>
-                <button type="button" class="btn btn-warning" data-toggle="modal"
+                <app-edit-menu *ngIf="isAdmin" [menu]="menu" (edit)="editMenu($event)"></app-edit-menu>
+                <button *ngIf="!isAdmin" type="button" class="btn btn-warning" data-toggle="modal"
                  data-target="#exampleModal"(click)="open(mymodal)">Rate</button>
                  <button *ngIf="isOrdered" class="btn btn-danger" (click)="deletOrder()">Delete</button>
-                <button *ngIf="!isOrdered" class="btn btn-info" (click)="order()">Order</button>
+                <button *ngIf="!isOrdered && !isAdmin" class="btn btn-info" (click)="order()">Order</button>
+                <button *ngIf="isAdmin" class="btn btn-danger" (click)="deleteItem()">delete</button>
             </div>
         </div>
 
