--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,4 @@
 
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../node_modules/ngx-toastr/toastr.css'
