--- a/src/app/menu-item/menu-item.component.html
+++ b/src/app/menu-item/menu-item.component.html
@@ -21,7 +21,7 @@
             </p>
             <div class="row-btns">
                 <app-edit-menu *ngIf="isAdmin" [menu]="menu" (edit)="editMenu($event)"></app-edit-menu>
-                <button *ngIf="!isAdmin" type="button" class="btn btn-warning" data-toggle="modal"
+                <button  type="button" class="btn btn-warning" data-toggle="modal"
                  data-target="#exampleModal"(click)="open(mymodal)">Rate</button>
                  <button *ngIf="isOrdered" class="btn btn-danger" (click)="deletOrder()">Delete</button>
                 <button *ngIf="!isOrdered && !isAdmin" class="btn btn-info" (click)="order()">Order</button>
@@ -35,17 +35,19 @@
 
 <ng-template #mymodal let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Bootstrap Modal</h4>
+        <h4 class="modal-title" id="modal-basic-title">Rating</h4>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">×</span>
         </button>
     </div>
     <div class="modal-body">
-        <input type="text" class="form-control" #ratingInput>
-
+        <input ngModel pattern="[1-5]" required type="text" class="form-control" #ratingInput="ngModel">
+    </div>
+    <div [hidden]="ratingInput.valid || !ratingInput.dirty">
+        <span class="alert alert-danger">Rating should be [1-5]</span>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="rate(ratingInput.value)">Save</button>
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">clode</button>
+        <button type="button" class="btn btn-outline-dark" [disabled]="!ratingInput.valid" (click)="rate(ratingInput.value)">Save</button>
+        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">close</button>
     </div>
 </ng-template>
