filter orders by restaurant

--- a/src/app/add-menu-form/add-menu-form.component.html
+++ b/src/app/add-menu-form/add-menu-form.component.html
@@ -45,7 +45,8 @@
 
         <div class="form-group">
             <label for="image">Image</label>
-            <input [(ngModel)]="model.image" name="image" type="text" class="form-control" id="image" #image="ngModel">
+            <input [(ngModel)]="model.image" name="image" type="text" class="form-control"
+             id="image" #image="ngModel">
 
         </div>
 
