--- a/src/app/menu-item/menu-item.component.html
+++ b/src/app/menu-item/menu-item.component.html
@@ -23,9 +23,8 @@
                 <app-edit-menu *ngIf="isAdmin" [menu]="menu" (edit)="editMenu($event)"></app-edit-menu>
                 <button  type="button" class="btn btn-warning" data-toggle="modal"
                  data-target="#exampleModal"(click)="open(mymodal)">Rate</button>
-                <button *ngIf="isOrdered" class="btn btn-info" (click)="confirmOrder()">Confirm</button>
-                <button *ngIf="isOrdered" class="btn btn-danger" (click)="deletOrder()">Delete</button>
-                <button *ngIf="!isOrdered && !isAdmin" class="btn btn-info" (click)="order()">Order</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+                    (click)="open(ordermodal)">Order</button>
                 <button *ngIf="isAdmin" class="btn btn-danger" (click)="deleteItem()">delete</button>
             </div>
         </div>
@@ -49,6 +48,26 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-outline-dark" [disabled]="!ratingInput.valid" (click)="rate(ratingInput.value)">Save</button>
+        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">close</button>
+    </div>
+</ng-template>
+
+<ng-template #ordermodal let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title" id="modal-basic-title">Order Quantity</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">×</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <input ngModel pattern="[0-9]*" required type="text" class="form-control" #orderInput="ngModel">
+    </div>
+    <div [hidden]="orderInput.valid || !orderInput.dirty">
+        <span class="alert alert-danger">Rating should be [1-5]</span>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" [disabled]="!orderInput.valid"
+            (click)="order(orderInput.value)">Save</button>
         <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">close</button>
     </div>
 </ng-template>
