--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -17,18 +17,12 @@
                 <a class="nav-link" [routerLink]="['/orders']" routerLinkActive="router-link-active" >Orders</a>
             </li>
             <!-- <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/addRest']" routerLinkActive="router-link-active" >
-                    Add Restaurant
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/addMenu']" routerLinkActive="router-link-active" >
-                    Add Menu Item
-                </a>
+                <a class="nav-link" [routerLink]="['/login']" routerLinkActive="router-link-active">Log in</a>
             </li> -->
-            <li class="nav-item">
+
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
-            </li>
+            </li> -->
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search">
