--- a/src/app/ordered-item/ordered-item.component.html
+++ b/src/app/ordered-item/ordered-item.component.html
@@ -1,19 +1,15 @@
-<!-- <p>Works</p> -->
 
 <div class="card">
     <div style="height: 450px">
         <img class="card-img-top" [src]="menu.image" alt="Card image" style="height:100%">
     </div>
-    <div  style="font-size: 24px;">{{restName}}</div>
+    <div  style="font-size: 24px;">{{restName}} Restaurant</div>
     <div class="card-img-overlay">
         <div class="content">
             <h4 class="card-title" style="color: white;">{{menu.name}}</h4>
-            <!-- <div>
-                <i *ngFor="let item of rating" class="fa fa-star" style="color: yellow;"></i>
-            </div> -->
             <p style="color: white;">{{menu.descr}}</p>
             <p class="card-text" style="color: white;">
-                {{menu.price}}
+                ${{menu.price}}
             </p>
             <p class="card-text" style="color: white;">
                 {{order.quantity}} Pieces
