--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
+<app-login></app-login>
 
-
-
-<app-admin-panel *ngIf="isAdmin"></app-admin-panel>
-
-<div *ngIf="!isAdmin">
-    <app-nav-bar></app-nav-bar>
-    <router-outlet></router-outlet>
-</div>
