--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,25 @@
-<div class="card" *ngIf="!loggedIn">
+<div class="card col-6" *ngIf="!loggedIn">
     <h4 class="card-header">Login</h4>
     <div class="card-body">
         <form (ngSubmit)="onSubmit()">
             <div class="form-group">
-                <label for="username">Username</label>
+                <label for="username">Username /Ahmad: admin, Ali: user</label>
                 <input type="text" id="username" class="form-control" #username />
-                <!-- <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                    <div *ngIf="f.username.errors.required">Username is required</div>
-                </div> -->
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Password /Any</label>
                 <input type="password" class="form-control" #password />
-                <!-- <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
-                </div> -->
             </div>
             <div class="form-group">
                 <button class="btn btn-primary" (click)="login(username.value, password.value)">
-                    <!-- <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span> -->
                     Login
                 </button>
-                <a [routerLink]="['/register']" routerLinkActive="router-link-active" class="btn btn-link">Register</a>
+                <!-- <a [routerLink]="['/register']" routerLinkActive="router-link-active" class="btn btn-link">Register</a> -->
             </div>
         </form>
     </div>
 </div>
+
 
 <div *ngIf="loggedIn">
     <app-nav-bar></app-nav-bar>
