--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 <div>
-    <app-login class="col-2"></app-login>
+    <app-nav-bar></app-nav-bar>
+    <router-outlet></router-outlet>
+    <!-- <app-login></app-login> -->
 </div>
 
 
