--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -15,9 +15,16 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/orders']" routerLinkActive="router-link-active" >Orders</a>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item" *ngIf="isAdmin">
+                <a class="nav-link" [routerLink]="['/addMenu']" routerLinkActive="router-link-active">Add Menu</a>
+            </li>
+            <li class="nav-item" *ngIf="isAdmin">
+                <a class="nav-link" [routerLink]="['/addRest']" routerLinkActive="router-link-active">Add restaurant</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/login']" routerLinkActive="router-link-active">Log in</a>
-            </li> -->
+            </li>
+            
 
         </ul>
         <form class="form-inline my-2 my-lg-0">
