register users to db

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
                 <button class="btn btn-primary" (click)="login(username.value, password.value)">
                     Login
                 </button>
-                <!-- <a [routerLink]="['/register']" routerLinkActive="router-link-active" class="btn btn-link">Register</a> -->
+                <a [routerLink]="['/register']" routerLinkActive="router-link-active" class="btn btn-link">Register</a>
             </div>
         </form>
     </div>
