--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,38 +1,24 @@
 <div class="card col-6">
     <h4 class="card-header">Login</h4>
-    {{message}}
     <div class="card-body">
-        <form (ngSubmit)="onSubmit()">
+        <form [formGroup]="loginForm">
             <div class="form-group">
-                <label for="username">Username /Ahmad: admin, Ali: user</label>
-                <input type="text" id="username" class="form-control" #username />
+                <label>User name /Ahmad:admin, Ali:user</label>
+                <input class="form-control" type="text" formControlName='username' [(ngModel)]='usern' name="username">
+                <div *ngIf="username.touched && username.invalid" class="alert alert-danger">This field is required</div>
+            </div>
+            <div class="form-gorup">
+                <label>Password /123</label>
+                <input class="form-control" type="password" formControlName='password' [(ngModel)]='pswrd' name="password">
+                <div *ngIf="password.touched && password.invalid" class="alert alert-danger">This field is required</div>
             </div>
             <div class="form-group">
-                <label for="password">Password /Any</label>
-                <input type="password" class="form-control" #password />
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary" (click)="login(username.value, password.value)">
+                <button [disabled]="!loginForm.valid" class="btn btn-primary" (click)="login(username.value, password.value)">
                     Login
                 </button>
                 <a [routerLink]="['/register']" routerLinkActive="router-link-active" class="btn btn-link">Register</a>
             </div>
         </form>
     </div>
+    <p>{{errMessage}}</p>
 </div>
-
-
-<!-- <div *ngIf="loggedIn">
-    <app-nav-bar></app-nav-bar>
-    <div class="row" style="justify-content: center;">
-        <div *ngIf="isAdmin" class="col-3">
-            <app-admin-panel ></app-admin-panel>
-        </div>
-        
-        <div class="col-9">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
-    
-    
-</div> -->
