--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -22,14 +22,13 @@
                 <a class="nav-link" [routerLink]="['/addRest']" routerLinkActive="router-link-active">Add restaurant</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/login']" routerLinkActive="router-link-active">Log in</a>
+                <a *ngIf='!isLoggedin' class="nav-link" [routerLink]="['/login']" routerLinkActive="router-link-active">Log in</a>
+            </li>
+            <li class="nav-item">
+                <a *ngIf='isLoggedin' class="nav-link" (click)="logout()">Log out</a>
             </li>
             
 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-outline-dark btn-warning my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
