--- a/src/app/restaurants-list/restaurants-list.component.html
+++ b/src/app/restaurants-list/restaurants-list.component.html
@@ -1,26 +1,12 @@
 
 <div class="container">
     <br>
-    <!-- <div>
-        <h2>Student:</h2>
-        <p>{{student}}</p>
-    </div>
-    <span>Filter by </span>
-    <select  (change)="filter($event.target.value)">
-        <option *ngFor="let item of [ 'Name', 'Rating', 'City']" value={{item}}>{{item}}</option>
-    </select>
-    <div> -->
-    <div *ngIf="isAdmin">
-        <a [routerLink]="['/addMenu']" routerLinkActive="router-link-active">ADd Menu</a> <br>
-        <a [routerLink]="['/addRest']" routerLinkActive="router-link-active">ADd REstaurant</a> <br>
-    </div>
-    <br>
     <div class="row" *ngIf="restaurants.length>0">
         <app-restaurant-item *ngFor="let restaurant of restaurants"
          [restaurant]="restaurant" (delete)="update()"></app-restaurant-item>
     </div>
     <div *ngIf="restaurants.length==0">
-        There is NO any restaurants to show!!
+        There is NO any restaurant to show!!
     </div>
     
 </div>
