--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
         <form [formGroup]="loginForm">
             <div class="form-group">
-                <label>User name Ali</label>
+                <label>User name /Ali</label>
                 <input class="form-control" type="text" formControlName='username' [(ngModel)]='usern' name="username">
                 <div *ngIf="username.touched && username.invalid" class="alert alert-danger">This field is required</div>
             </div>
@@ -14,11 +14,12 @@
             </div>
             <div class="form-group">
                 <button [disabled]="!loginForm.valid" class="btn btn-primary" (click)="login(username.value, password.value)">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
                 <a [routerLink]="['/register']" routerLinkActive="router-link-active" class="btn btn-link">Register</a>
             </div>
         </form>
     </div>
-    <p>{{errMessage}}</p>
+    <p *ngIf="errMessage" class="alert alert-danger">{{errMessage}}</p>
 </div>
